{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 134,
  "lineage": "c7a79a2a-0dc0-13b5-ec36-061ea3fef2c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2af51e265bd5e0e",
            "arn": "arn:aws:ec2:ap-south-1:609818312943:instance/i-039da9892b7e7f69c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-instance-profile",
            "id": "i-039da9892b7e7f69c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c47e0a9ff1aecf0",
            "private_dns": "ip-10-0-0-177.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.177",
            "public_ip": "13.232.18.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de8f1668470495b0",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eec7ed763ecb6c58"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098c9f7a38cdd63a2",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eec7ed763ecb6c58"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.our-instance-profile",
            "aws_iam_role.our-iam-role",
            "aws_security_group.our-security-group",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2af51e265bd5e0e",
            "arn": "arn:aws:ec2:ap-south-1:609818312943:instance/i-0d167d4e959fdb8e6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d167d4e959fdb8e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0598fc22d64744a37",
            "private_dns": "ip-10-0-0-214.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.214",
            "public_ip": "3.6.39.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0970e53f2b8320eca",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ea7457843c47dd6f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098c9f7a38cdd63a2",
            "tags": {
              "Name": "nexus-server"
            },
            "tags_all": {
              "Name": "nexus-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea7457843c47dd6f"
            ]
          },
          "dependencies": [
            "aws_security_group.our-security-group-for-nexus",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonar-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2af51e265bd5e0e",
            "arn": "arn:aws:ec2:ap-south-1:609818312943:instance/i-0c1368bb842b3acc1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1368bb842b3acc1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0124405e1bca10f67",
            "private_dns": "ip-10-0-0-221.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.221",
            "public_ip": "13.201.62.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cde18b17167a948d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-073855b16d6fb8303"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098c9f7a38cdd63a2",
            "tags": {
              "Name": "sonar-server"
            },
            "tags_all": {
              "Name": "sonar-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073855b16d6fb8303"
            ]
          },
          "dependencies": [
            "aws_security_group.our-Security-Group-for-sonar",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "our-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:internet-gateway/igw-05aefe9f63ac2132b",
            "id": "igw-05aefe9f63ac2132b",
            "owner_id": "609818312943",
            "tags": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05aefe9f63ac2132b",
            "id": "r-rtb-0b1abc460241a37921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1abc460241a3792",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05aefe9f63ac2132b",
            "id": "r-rtb-01718743ba54a80581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01718743ba54a8058",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table2",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:route-table/rtb-09705c5ebdd02b9c6",
            "id": "rtb-09705c5ebdd02b9c6",
            "owner_id": "609818312943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:route-table/rtb-0d81fd414f479eba6",
            "id": "rtb-0d81fd414f479eba6",
            "owner_id": "609818312943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:route-table/rtb-0b1abc460241a3792",
            "id": "rtb-0b1abc460241a3792",
            "owner_id": "609818312943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:route-table/rtb-01718743ba54a8058",
            "id": "rtb-01718743ba54a8058",
            "owner_id": "609818312943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a6a454394eac17a",
            "route_table_id": "rtb-09705c5ebdd02b9c6",
            "subnet_id": "subnet-05622be0b92992034"
          },
          "dependencies": [
            "aws_route_table.our-private-route-table",
            "aws_subnet.our-private-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062af25d02f3c7c1f",
            "route_table_id": "rtb-0d81fd414f479eba6",
            "subnet_id": "subnet-0cf68325b9563c9fa"
          },
          "dependencies": [
            "aws_route_table.our-private-route-table2",
            "aws_subnet.our-private-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e3bc7143bdd24b4",
            "route_table_id": "rtb-0b1abc460241a3792",
            "subnet_id": "subnet-098c9f7a38cdd63a2"
          },
          "dependencies": [
            "aws_route_table.our-public-route-table",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd31980d69d699e9",
            "route_table_id": "rtb-01718743ba54a8058",
            "subnet_id": "subnet-08135a996a84a86e6"
          },
          "dependencies": [
            "aws_route_table.our-public-route-table2",
            "aws_subnet.our-public-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-Security-Group-for-sonar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:security-group/sg-073855b16d6fb8303",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073855b16d6fb8303",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "OOur-Security-Group-for-sonar",
            "name_prefix": "",
            "owner_id": "609818312943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-sonar"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-sonar"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:security-group/sg-0eec7ed763ecb6c58",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eec7ed763ecb6c58",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Our-Security-Group",
            "name_prefix": "",
            "owner_id": "609818312943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-security-group-for-nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:security-group/sg-0ea7457843c47dd6f",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea7457843c47dd6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Our-Security-Group-for-nexus",
            "name_prefix": "",
            "owner_id": "609818312943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-nexus"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-nexus"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:subnet/subnet-05622be0b92992034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05622be0b92992034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "609818312943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:subnet/subnet-0cf68325b9563c9fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf68325b9563c9fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "609818312943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:subnet/subnet-098c9f7a38cdd63a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098c9f7a38cdd63a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "609818312943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:subnet/subnet-08135a996a84a86e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08135a996a84a86e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "609818312943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-02d2d143571ab40d3"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "our-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:609818312943:vpc/vpc-02d2d143571ab40d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0317a67a96451ce05",
            "default_route_table_id": "rtb-07b966942f02b4e88",
            "default_security_group_id": "sg-051108f78a38cfa01",
            "dhcp_options_id": "dopt-0ae182ef1af1b3d1d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d2d143571ab40d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b966942f02b4e88",
            "owner_id": "609818312943",
            "tags": {
              "Environment": "dev",
              "Name": "Our-VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-VPC"
            }
          }
        }
      ]
    }
  ]
}